setup/kubernetes-manifests/archive/coolretailer-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coolretailer-ui
  labels:
    app: coolretailer-ui
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: coolretailer-ui
    tier: frontend
